--- a/snippets/azure-cli/devcontainer.json
+++ b/snippets/azure-cli/devcontainer.json
@@ -3,4 +3,14 @@
 		// Mounts the .azure host folder into the dev container to pick up host az CLI login details
 		"type=bind,source=${env:HOME}${env:USERPROFILE}/.azure,target=__DEVCONTAINER_HOME__/.azure",
 	],
+	"settings": {
+		"terminal.integrated.profiles.linux": {
+			"az interactive": {
+				"path": "az",
+				"args": [
+					"interactive"
+				]
+			},
+		}
+	}
 }
